--- a/assets/index.html
+++ b/assets/index.html
@@ -56,8 +56,8 @@
 
 <body>
   <ul id="messages"></ul>
-  <form action="">
-    <input id="m" autocomplete="off" /><button>Send</button>
+  <form id="chat-form" action="">
+    <input id="m" name="message" autocomplete="off" /><button>Send</button>
   </form>
 </body>
 
